<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary"
              android:orientation="vertical"
              tools:context="com.example.manhngo.avsemap.Interaction.LoginActivity">

    <!-- For the purpose of the app, many attributes are not refactored-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/app_name"
        android:gravity="center"
        android:id="@+id/titleChat"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"/>

    <EditText
        android:id="@+id/edt_EmailLogin"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/log_in_margin"
        android:layout_marginRight="@dimen/log_in_margin"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_account"/>
    <EditText
        android:id="@+id/edt_PasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="@dimen/log_in_margin"
        android:layout_marginRight="@dimen/log_in_margin"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color_hint"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_secure_key"/>


    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:background="@color/text_color"
        android:layout_marginLeft="@dimen/log_in_margin"
        android:textColor="@color/primary"
        android:layout_marginRight="@dimen/log_in_margin"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <Button
        android:id="@+id/btn_BackToMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/backtomap"
        android:background="@color/text_color"
        android:textColor="@color/primary"
        android:layout_marginLeft="@dimen/log_in_margin"
        android:layout_marginRight="@dimen/log_in_margin"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="If you don't have account, you can Register here!"
        android:textColor="#FFFFFF"
        android:alpha="0.6"
        android:id="@+id/tev_RegisterOfLogin"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickRegister"/>



</LinearLayout>

